created necessary templates

--- a/index.html
+++ b/index.html
@@ -75,27 +75,7 @@
           </div>
           <!-- ANCHOR Active Note -->
           <div class="col-md-8 rounded mood border border-2 border-light position-relative">
-            <div id="active-note">
-              <div class="row justify-content-center">
-                <div class="col-10 py-3">
-                  <div class="row text-light">
-                    <div class="col-6 position-relative">
-                      <i class="fa-solid fa-bookmark fa-2xl position-absolute bookmark" style="color: #63e6be"></i>
-                      <h4>CSS Tricks</h4>
-                      <p class="m-0">Created on: 06/04/23</p>
-                      <p>Last Updated on: Wednesday 6/8/23 10:43am</p>
-                    </div>
-
-                    <div class="col-6 d-flex justify-content-end align-items-end mb-2">
-                      <button class="btn btn-outline-danger rounded px-2 align-self-end"><i class="fa-solid fa-trash" style="color: #d70000"></i> Delete</button>
-                      <button class="btn btn-outline-primary rounded px-2 align-self-end ms-3"><i class="fa-solid fa-floppy-disk" style="color: #74c0fc"></i> Save</button>
-                    </div>
-
-                    <textarea class="form-control border border-2 border-primary bg-dark" name="body" rows="19"></textarea>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div id="active-note"></div>
           </div>
         </div>
       </section>
